# clang-game-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  jcscript
docs/: handbook.md
libs/GameCraft/include/juniorit/GameCraft/: Game.h  Scene.h  Sprite.h  utils.h
libs/GameCraft/src/: Game.c  Scene.c  Sprite.c  utils.c
playground/: 1-temperature.c  2-grade-analyze.c  3-discount-calculator.c  4-password-retry.c  5-multiplication-practice.c  countdown.c  discount-calculator.c  grade-analyze.c  helloworld.c  multiplication-practice.c  password-retry.c  simple-game-engine.c  simple-print.c  t-rex-walking.c  temperature.c
playground/original/: simple-game-engine.c  variable.c
playground/prompts/: t-rex-walking.c
showcase/: advance.c  basic.c  discount-calculator.c  discount-calculator.php  grade-analyze.c  grade-analyze.php  multiplication-practice.c  multiplication-practice.php  password-retry.c  password-retry.php
src/: FirstScene.c  FirstScene.h  game.c  main.c
web/: index.data  index.html  index.js  index.wasm
